// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text resizer does not render if textSize is null 1`] = `
.c0 {
  display: contents;
}

.c1 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 4.8rem;
}

.c1:hover,
.c1:focus {
  color: #424242;
}

.c2 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
}

.c3 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 4.8rem;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  min-width: auto;
  display: none;
}

.c3:hover,
.c3:focus {
  color: #424242;
}

.c3:hover,
.c3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

@media screen and (max-width:50em) {
  .c3 {
    display: block;
  }
}

<div
  className="topbar-wrapper TopBarWrapper topbar-shadow disable-print"
  data-testid="topbar"
  style={
    Object {
      "--topbar-top-desktop": "7rem",
      "--topbar-top-mobile": "6rem",
      "--topbar-z-index": 30,
      "--topbar-z-index-mobile": 51,
    }
  }
>
  <div
    className="topbar-search-print-wrapper topbar-shadow topbar-search-print-wrapper--sidebar-closed"
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "meta": undefined,
              "payload": 0,
              "type": "Content/setTextSize",
            },
          ],
          Array [
            Object {
              "meta": undefined,
              "payload": null,
              "type": "Content/setTextSize",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "meta": undefined,
              "payload": 0,
              "type": "Content/setTextSize",
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "meta": undefined,
              "payload": null,
              "type": "Content/setTextSize",
            },
          },
        ],
      }
    }
    isDesktopSearchOpen={false}
    isTocOpen={null}
    isVerticalNavOpen={null}
    style={
      Object {
        "--button-min-width": "4.8rem",
        "--content-wrapper-max-width": "128rem",
        "--neutral-bg": "#fff",
        "--sidebar-transition-time": "300ms",
        "--topbar-desktop-height": "5rem",
        "--topbar-mobile-height": "5.3rem",
      }
    }
  >
    <div
      className="c0"
      id="mobile-menu-button"
    >
      <button
        aria-label="Open menu"
        className="c1 topbar-menu-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c2"
          viewBox="0 0 448 512"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="topbar-search-input-wrapper SearchInputWrapper"
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
      style={
        Object {
          "--focus-border-color": "#0dc0dc",
          "--search-button-bg": "transparent",
          "--search-icon-color": "#5e6062",
          "--toolbar-icon-color": "#5e6062",
        }
      }
    >
      <input
        aria-label="Search this book"
        className="topbar-search-input-field topbar-search-input topbar-search-input-field--desktop"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        style={
          Object {
            "--placeholder-color": "#6f6f6f",
            "--search-input-height": "3.2rem",
            "--text-color": "#424242",
          }
        }
        type="search"
        value=""
      />
      <button
        aria-label="Search"
        className="c1 topbar-search-button topbar-search-button--mobile"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        style={
          Object {
            "--search-button-bg": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
          }
        }
        type="button"
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          style={
            Object {
              "color": "#5e6062",
            }
          }
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        aria-label="Search"
        className="c1 topbar-search-button topbar-search-button--desktop"
        data-experiment={true}
        style={
          Object {
            "--search-button-bg": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
          }
        }
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          style={
            Object {
              "color": "#5e6062",
            }
          }
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
  </div>
  <div
    className="topbar-mobile-search-wrapper topbar-shadow topbar-mobile-search-wrapper--mobile-toolbar-closed"
    style={
      Object {
        "--mobile-search-wrapper-height": "5.3rem",
        "--neutral-bg": "#fff",
      }
    }
  >
    <hr
      className="topbar-hr"
      style={
        Object {
          "--toolbar-hr-height": "0.1rem",
        }
      }
    />
    <div
      className="topbar-mobile-search-container"
      style={
        Object {
          "--max-nav-width": "128rem",
          "--mobile-search-input-height": "3.2rem",
          "--mobile-search-margin": "1rem",
          "--page-padding-desktop": "3.2rem",
          "--page-padding-mobile": "1.6rem",
        }
      }
    >
      <button
        className="c3"
        data-testid="close-search-results"
        onClick={[Function]}
      >
        <div
          className="topbar-inner-text"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="topbar-search-input-wrapper SearchInputWrapper"
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
        style={
          Object {
            "--focus-border-color": "#0dc0dc",
            "--search-button-bg": "transparent",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
          }
        }
      >
        <input
          aria-label="Search this book"
          className="topbar-search-input-field topbar-search-input"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          style={
            Object {
              "--placeholder-color": "#6f6f6f",
              "--search-input-height": "3.2rem",
              "--text-color": "#424242",
            }
          }
          type="search"
          value=""
        />
        <button
          aria-label="Search"
          className="c1 topbar-search-button topbar-search-button--desktop"
          data-experiment={true}
          style={
            Object {
              "--search-button-bg": "transparent",
              "--search-button-transition": "none",
              "--search-icon-color": "#5e6062",
            }
          }
          value="Search"
        >
          <svg
            aria-hidden="true"
            height="18px"
            role="img"
            style={
              Object {
                "color": "#5e6062",
              }
            }
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Search
            </title>
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
    </div>
  </div>
</div>
`;

exports[`text resizer opens menu when clicking menu button 1`] = `
.c0 {
  display: contents;
}

.c7 {
  cursor: pointer;
}

.c3 > :where(*:not(.c6)) {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  position: absolute;
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,0.1);
  border: 1px solid #d5d5d5;
  top: calc(100% + 0.4rem);
  left: 0;
}

.c4 {
  overflow: visible;
  position: relative;
}

.c9 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
}

.c9 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c5 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c5 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 4.8rem;
}

.c1:hover,
.c1:focus {
  color: #424242;
}

.c2 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
}

.c8 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
  height: 100%;
  min-width: 4.8rem;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  min-width: auto;
  display: none;
}

.c8:hover,
.c8:focus {
  color: #424242;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

@media screen and (max-width:75em) {
  .c9 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c5 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:50em) {
  .c8 {
    display: block;
  }
}

<div
  className="topbar-wrapper TopBarWrapper topbar-shadow disable-print"
  data-testid="topbar"
  style={
    Object {
      "--topbar-top-desktop": "7rem",
      "--topbar-top-mobile": "6rem",
      "--topbar-z-index": 30,
      "--topbar-z-index-mobile": 51,
    }
  }
>
  <div
    className="topbar-search-print-wrapper topbar-shadow topbar-search-print-wrapper--sidebar-closed"
    dispatch={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "meta": undefined,
              "payload": 0,
              "type": "Content/setTextSize",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "meta": undefined,
              "payload": 0,
              "type": "Content/setTextSize",
            },
          },
        ],
      }
    }
    isDesktopSearchOpen={false}
    isTocOpen={null}
    isVerticalNavOpen={null}
    style={
      Object {
        "--button-min-width": "4.8rem",
        "--content-wrapper-max-width": "128rem",
        "--neutral-bg": "#fff",
        "--sidebar-transition-time": "300ms",
        "--topbar-desktop-height": "5rem",
        "--topbar-mobile-height": "5.3rem",
      }
    }
  >
    <div
      className="c0"
      id="mobile-menu-button"
    >
      <button
        aria-label="Open menu"
        className="c1 topbar-menu-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c2"
          viewBox="0 0 448 512"
        >
          <path
            d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form
      className="topbar-search-input-wrapper SearchInputWrapper"
      data-experiment={true}
      data-testid="desktop-search"
      onSubmit={[Function]}
      style={
        Object {
          "--focus-border-color": "#0dc0dc",
          "--search-button-bg": "transparent",
          "--search-icon-color": "#5e6062",
          "--toolbar-icon-color": "#5e6062",
        }
      }
    >
      <input
        aria-label="Search this book"
        className="topbar-search-input-field topbar-search-input topbar-search-input-field--desktop"
        data-testid="desktop-search-input"
        onChange={[Function]}
        placeholder="Search this book"
        style={
          Object {
            "--placeholder-color": "#6f6f6f",
            "--search-input-height": "3.2rem",
            "--text-color": "#424242",
          }
        }
        type="search"
        value=""
      />
      <button
        aria-label="Search"
        className="c1 topbar-search-button topbar-search-button--mobile"
        data-analytics-label="Search this book"
        data-experiment={true}
        data-testid="mobile-toggle"
        onClick={[Function]}
        style={
          Object {
            "--search-button-bg": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
          }
        }
        type="button"
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          style={
            Object {
              "color": "#5e6062",
            }
          }
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        aria-label="Search"
        className="c1 topbar-search-button topbar-search-button--desktop"
        data-experiment={true}
        style={
          Object {
            "--search-button-bg": "transparent",
            "--search-button-transition": "none",
            "--search-icon-color": "#5e6062",
          }
        }
        value="Search"
      >
        <svg
          aria-hidden="true"
          height="18px"
          role="img"
          style={
            Object {
              "color": "#5e6062",
            }
          }
          version="1.1"
          viewBox="0 0 18 18"
          width="18px"
        >
          <title>
            Search
          </title>
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              fillRule="nonzero"
              transform="translate(-938.000000, -206.000000)"
            >
              <path
                d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
              />
            </g>
          </g>
        </svg>
      </button>
    </form>
    <div
      className="c3 c4 topbar-text-resizer-dropdown topbar-text-resizer-dropdown--mobile-variant"
    >
      <button
        aria-controls="text-resizer-menu"
        aria-expanded={true}
        aria-label="Change text size"
        className="plain-button c5 c6 c7"
        data-analytics-label="Change text size"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          <img
            alt=""
            aria-hidden="true"
            src="text-size.svg"
          />
        </div>
      </button>
      <div
        className="topbar-text-resizer-menu"
        id="text-resizer-menu"
        style={
          Object {
            "--text-resizer-color": "#5e6062",
            "--text-resizer-fallback-bg": "#888888",
            "--text-resizer-gradient": "linear-gradient(
        to right,
        #002468 40%,
        #888888 40%
      )",
          }
        }
      >
        <label
          id="text-resizer-label"
        >
          Text size
        </label>
        <div
          aria-labelledby="text-resizer-label"
          className="controls"
          role="group"
        >
          <button
            aria-label="Decrease text size"
            className="c1 topbar-text-resizer-change-button"
            data-testid="decrease-text-size"
            onClick={[Function]}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size-decrease.svg"
            />
          </button>
          <input
            aria-labelledby="text-resizer-label"
            data-testid="change-text-size"
            max={3}
            min={-2}
            onChange={[Function]}
            step="1"
            type="range"
            value={0}
          />
          <button
            aria-label="Increase text size"
            className="c1 topbar-text-resizer-change-button"
            data-testid="increase-text-size"
            onClick={[Function]}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size-increase.svg"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="topbar-mobile-search-wrapper topbar-shadow topbar-mobile-search-wrapper--mobile-toolbar-closed"
    style={
      Object {
        "--mobile-search-wrapper-height": "5.3rem",
        "--neutral-bg": "#fff",
      }
    }
  >
    <hr
      className="topbar-hr"
      style={
        Object {
          "--toolbar-hr-height": "0.1rem",
        }
      }
    />
    <div
      className="topbar-mobile-search-container"
      style={
        Object {
          "--max-nav-width": "128rem",
          "--mobile-search-input-height": "3.2rem",
          "--mobile-search-margin": "1rem",
          "--page-padding-desktop": "3.2rem",
          "--page-padding-mobile": "1.6rem",
        }
      }
    >
      <button
        className="c8"
        data-testid="close-search-results"
        onClick={[Function]}
      >
        <div
          className="topbar-inner-text"
        >
          Close
        </div>
      </button>
      <form
        action="#"
        className="topbar-search-input-wrapper SearchInputWrapper"
        data-experiment={true}
        data-testid="mobile-search"
        onSubmit={[Function]}
        style={
          Object {
            "--focus-border-color": "#0dc0dc",
            "--search-button-bg": "transparent",
            "--search-icon-color": "#5e6062",
            "--toolbar-icon-color": "#5e6062",
          }
        }
      >
        <input
          aria-label="Search this book"
          className="topbar-search-input-field topbar-search-input"
          data-testid="mobile-search-input"
          onChange={[Function]}
          placeholder="Search this book"
          style={
            Object {
              "--placeholder-color": "#6f6f6f",
              "--search-input-height": "3.2rem",
              "--text-color": "#424242",
            }
          }
          type="search"
          value=""
        />
        <button
          aria-label="Search"
          className="c1 topbar-search-button topbar-search-button--desktop"
          data-experiment={true}
          style={
            Object {
              "--search-button-bg": "transparent",
              "--search-button-transition": "none",
              "--search-icon-color": "#5e6062",
            }
          }
          value="Search"
        >
          <svg
            aria-hidden="true"
            height="18px"
            role="img"
            style={
              Object {
                "color": "#5e6062",
              }
            }
            version="1.1"
            viewBox="0 0 18 18"
            width="18px"
          >
            <title>
              Search
            </title>
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <g
                fill="currentColor"
                fillRule="nonzero"
                transform="translate(-938.000000, -206.000000)"
              >
                <path
                  d="M945,206 C948.865993,206 952,209.134007 952,213 C952,214.662837 951.420201,216.190255 950.45174,217.391118 L955.03033,221.96967 C955.323223,222.262563 955.323223,222.737437 955.03033,223.03033 C954.764064,223.296597 954.3474,223.320803 954.053788,223.102948 L953.96967,223.03033 L949.391118,218.45174 C948.190255,219.420201 946.662837,220 945,220 C941.134007,220 938,216.865993 938,213 C938,209.134007 941.134007,206 945,206 Z M945,207.5 C941.962434,207.5 939.5,209.962434 939.5,213 C939.5,216.037566 941.962434,218.5 945,218.5 C948.037566,218.5 950.5,216.037566 950.5,213 C950.5,209.962434 948.037566,207.5 945,207.5 Z"
                />
              </g>
            </g>
          </svg>
        </button>
        
        
      </form>
      <div
        className="c3 c4 topbar-text-resizer-dropdown topbar-text-resizer-dropdown--mobile-variant"
      >
        <button
          aria-controls="text-resizer-menu"
          aria-expanded={false}
          aria-label="Change text size"
          className="plain-button c9 c6 c7"
          data-analytics-label="Change text size"
          onClick={[Function]}
        >
          <div
            tabIndex={-1}
          >
            <img
              alt=""
              aria-hidden="true"
              src="text-size.svg"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
